# apps/api/docs/swagger.json
@@ -84,9 +84,9 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "OK",
+                        "description": "ログイン成功時のレスポンス",
                         "schema": {
-                            "$ref": "#/definitions/dto.TokenResponse"
+                            "$ref": "#/definitions/dto.LoginResponse"
                         }
                     },
                     "400": {
@@ -188,27 +188,22 @@
                 }
             }
         },
+        "dto.LoginResponse": {
+            "type": "object",
+            "properties": {
+                "accessToken": {
+                    "type": "string"
+                },
+                "user": {
+                    "$ref": "#/definitions/dto.UserSubDTO"
+                }
+            }
+        },
         "dto.MessageResponse": {
             "type": "object",
             "properties": {
                 "message": {
                     "type": "string"
-                }
-            }
-        },
-        "dto.TokenDTO": {
-            "type": "object",
-            "properties": {
-                "token": {
-                    "type": "string"
-                }
-            }
-        },
-        "dto.TokenResponse": {
-            "type": "object",
-            "properties": {
-                "data": {
-                    "$ref": "#/definitions/dto.TokenDTO"
                 }
             }
         },
@@ -262,6 +257,14 @@
             "properties": {
                 "data": {
                     "$ref": "#/definitions/dto.UserDTO"
+                }
+            }
+        },
+        "dto.UserSubDTO": {
+            "type": "object",
+            "properties": {
+                "sub": {
+                    "type": "string"
                 }
             }
         },
