# apps/api/domain/dto/login.go
@@ -1,0 +1,10 @@
+package dto
+
+type LoginResponse struct {
+	AccessToken string     `json:"accessToken"`
+	User        UserSubDTO `json:"user"`
+}
+
+type UserSubDTO struct {
+	Sub string `json:"sub"`
+}
